k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timestamp-hostname-app
  labels:
    app: timestamp-hostname-app

spec:
  replicas: 4
  selector:
    matchLabels:
      app: timestamp-hostname-app

  template:
    metadata:
      name: timestamp-hostname-app
      labels:
        app: timestamp-hostname-app

    spec:
      containers:
        - name: timestamp-hostname-app-container
          image: timestamp-hostname-app:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
