k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: timestamp-hostname-app
  labels:
    app: timestamp-hostname-app

spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: timestamp-hostname-app
