k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timestamp-hostname-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: timehostapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: timestamp-hostname-app
            port:
              number: 80
